added end time param to query for new events from db
